Fixed text-align of job-title and stars size

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ section {
 }
 
 .job-title {
+	text-align: left;
   	font-size: 20px;
   	margin-top: 0;
   	margin-bottom: 0;
@@ -406,12 +407,36 @@ p {
 
 /* Everything too small for menu-picker and stars ----------- */
 @media only screen and (max-device-width : 480px) {
-	.stars i {
-		font-size: 75%px;
+	.skills .fa {
+	font-size: 16px;
 	}
 
 	#menu-picker {
 		flex-direction: column;
 	    -webkit-flex-direction: column;
+	}
+}
+
+/* Everything too small for menu-picker and stars ----------- */
+@media only screen and (max-device-width : 480px) {
+	.skills .fa {
+	font-size: 16px;
+	}
+
+	#menu-picker {
+		flex-direction: column;
+	    -webkit-flex-direction: column;
+	}
+}
+
+/* Smallest possible phones ----------- */
+@media only screen and (max-device-width : 360px) {
+	.skills .fa {
+	font-size: 11px;
+	}
+
+	.skill {
+	font-size: 14px;
+	font-weight: bold;
 	}
 }
